--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.38.0",
-    "vitest": "^1.1.3"
+    "vitest": "^1.1.3",
+    "zod-to-json-schema": "^3.24.6"
   },
   "engines": {
     "node": ">=18.0.0"
