--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^24.0.14",
+		"dotenv": "^17.2.3",
 		"fflate": "^0.8.2",
 		"lucide-svelte": "^0.525.0",
 		"marked": "^16.1.1",
