feat: implement offline-first L with pluggable cache system
Major eatures:
- Offline-first architecture with local Ollama A
- luggable cache provider system Memory/S/KV/oor43)
- nteractive L chat interface
- Resource sync and transfer services
- mport/export for offline sharing

Server nfrastructure:
- ache provider interface with 4 implementations
- achehain manager for configurable provider ordering
- Network detector for online/offline handling
- ResourceSync service for downloading from oor43
- Resourceransfer service for import/export

L lient clients/cli/):
- M client connecting via stdio transport
- A provider abstraction Ollama + OpenA)
- onfiguration management system
- nteractive REL chat interface
- Main entry point with commander

ocumentation:
- ache architecture guide
- Offline architecture guide
- Resource sharing guide
- Offline getting started guide
- omprehensive L REAME
- mplementation summary

Enables Bible translation work completely offline with no A costs.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,13 @@
     "chaos:all": "cd tests/chaos && CHAOS_MODE=aggressive node run-all-chaos-tests.ts",
     "sync-version": "node scripts/sync-version.js",
     "prepare": "node -e \"if (!process.env.CI && !process.env.CLOUDFLARE_PAGES) { require('child_process').execSync('husky', {stdio: 'inherit'}); }\"",
-    "create-endpoint": "node scripts/create-endpoint.js"
+    "create-endpoint": "node scripts/create-endpoint.js",
+    "cli:install": "cd clients/cli && npm install",
+    "cli:dev": "cd clients/cli && npm run dev",
+    "cli:build": "cd clients/cli && npm run build",
+    "cli:start": "cd clients/cli && npm start",
+    "cli:sync": "cd clients/cli && npm start sync",
+    "cli:export": "cd clients/cli && npm start export"
   },
   "dependencies": {
     "@upstash/redis": "^1.28.0",
